# castle-core

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: border.rs  core.rs  functions.rs  lib.rs  main.rs  render.rs  screen.rs  window.rs
tests/: render_window_border_tests.rs
