[package]
name = "castle-core"
version = "0.0.1"
authors = ["KatCote"]
edition = "2021"
description = ""
license = ""
homepage = ""
repository = "https://github.com/KatCote/castle-core"
documentation = ""
readme = "README.md"
categories = [""]
keywords = [""]
exclude = ["target", "Cargo.lock"]

[lib]
name = "castlecore"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossterm = "0.27.0"
